
[project]
name = "problems"
version = "0.1.0"
description = "Various solved ML / soft. eng. problems"
readme = "ReadMe.md"
requires-python = ">=3.13"
dependencies = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.pylint]
[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
good-names = """
    a, b, c, d, f, g, h, i, j, k, m, n, p, q, r, s, t, u, v, w, x, y, z,
    ax, df, hi, lo, pt, t0, t1, t2, ts, xs,
    ul, lr,
"""
disable = """
    C0114, missing-module-docstring,
    C0115, missing-class-docstring,
    C0116, missing-function-docstring,
    W1203, logging-fstring-interpolation,
    W3101, missing-timeout,
"""

[tool.pyright]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE",
    "C", "C4", "C90", "COM",  # "CPY",
    "D", "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G",
    "ICN", "INT", "ISC", "LOG", "NPY",
    "PD", "PERF", "PIE", "PL", "PTH", "PYI",
    "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT",
    "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401",
    "B009",
    "B905",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D200",
    "D203",
    "D205",
    "D211",
    "D212",
    "D213",
    "D401",
    "D404",
    "EXE003",
    "FBT001",
    "FBT002",
    "ICN001",
    "PD901",
    "PLR2004",
    "PTH123",
    "RET504",
    "RUF005",
    "RUF006",
    "SIM300",
]
