# Copyright 2022 John Hanley. MIT licensed.

[package]
name = "rust_lib"
version = "0.1.0"
authors = ["John Hanley <jhanley708-git@s6.sector6.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_fast"

crate-type = ["cdylib", "rlib"]

[dependencies.ndarray]
version = "0.15"

[dependencies.numpy]
version = "0.16"

[dependencies.pyo3]
version = "0.16"
features = ["extension-module"]
